# refainery

./: .gitignore  DESIGN.md  pyproject.toml
src/refainery/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  store.py
src/refainery/analyze/: __init__.py  client.py  prompts.py
src/refainery/apply/: __init__.py
src/refainery/detect/: __init__.py  heuristics.py
src/refainery/providers/: __init__.py  claude.py  cursor.py  tool_map.py
src/refainery/report/: __init__.py  markdown.py  terminal.py
tests/: test_store.py
tests/detect/: test_heuristics.py
tests/providers/: test_claude.py  test_tool_map.py
