[project]
name = "refainery"
version = "0.1.0"
description = "Automated skill refinement through retrospective analysis of AI coding agent conversations"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "claude-agent-sdk>=0.1.55",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
refainery = "refainery.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/refainery"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
